[FIX] Fixed z-index for .image-view and .image-box in phone.css.

--- a/css/phone.css
+++ b/css/phone.css
@@ -627,6 +627,7 @@ body {
     background: rgba(0, 0, 0, 0.8);
     width: 100%;
     display: none;
+    z-index: 1500;
 }
 
 .image-box {
@@ -638,6 +639,7 @@ body {
     transform: translate(-50%, -50%);
     /*background: tomato;*/
     display: none;
+    z-index: 1500;
 }
 
 #prev-btn,
